Use time-stamped coordinates instead of Pair<AbsoluteDate, Xxx>.